# ESP32-8048S070-Rust

./: .gitignore  Cargo.toml  bindings.h  build.rs  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
