[package]
name = "esp32_8048s070"
version = "0.0.1"
authors = ["anlumo"]
edition = "2021"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
#getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
#getrandom1 = { version = "0.1", git = "https://github.com/esp-rs-compat/getrandom.git", package = "getrandom", branch = "0.1" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
url = "2"
esp-idf-sys = { version = "0.33", features = ["binstart"] }
esp-idf-svc = "0.46"
esp-idf-hal = "0.41"
embedded-svc = "0.25"
embedded-hal = "0.2"
embedded-graphics = "0.8"
display-interface = "0.4"
display-interface-spi = "0.4"
smol = "1.2"
async-io = "=1.12"

[build-dependencies]
embuild = { version = "0.31.2", features = ["elf"] }
anyhow = "1"

# Future; might be possible once https://github.com/rust-lang/cargo/issues/9096 hits Cargo nightly:
#rust-esp32-ulp-blink = { git = "https://github.com/ivmarkov/rust-esp32-ulp-blink", artifact = "bin" }

[package.metadata.esp-idf-sys]
extra_components = [{ bindings_header = "bindings.h" }]
